--- a/Distribution-Box.html
+++ b/Distribution-Box.html
@@ -26,7 +26,7 @@
       padding: 0.5rem;
     }
     .nav-link:hover {
-      color: #6b6bfb;
+      color: #ffffff;
     }
     .nav-logo {
       max-height: 1.875rem;
@@ -251,11 +251,11 @@
       </div>
       <div class="nav-links">
         <a href="Homepg.html" class="nav-link text-base sm:text-lg">Home</a>
-        <a href="interface.html" class="nav-link text-base sm:text-lg">Interfaces</a>
+        <a href="interface.html" class="nav-link text-base sm:text-lg">Interface</a>
         <a href="Power.html" class="nav-link text-base sm:text-lg">Power</a>
         <a href="Water-Automation.html" class="nav-link text-base sm:text-lg">Water Automation</a>
-        <a href="Distribution-Box.html" class="nav-link text-base sm:text-lg">Distribution Box</a>
         <a href="Sensors.html" class="nav-link text-base sm:text-lg">Sensors</a>
+        <a href="Distribution-Box.html" class="nav-link text-base sm:text-lg">Distribution Box</a>
       </div>
     </div>
   </nav>
