--- a/Power.html
+++ b/Power.html
@@ -248,9 +248,13 @@
       .hero-bg p {
         font-size: 1.75rem;
       }
+      .services {
+        justify-items: center;
+        display: inline-grid;
+      }
       .services img{
-        align-self: center;
-        justify-self: center;
+        
+        justify-items: center;
         width: 70%;
         height: auto;
       }
@@ -276,11 +280,11 @@
       </div>
       <div class="nav-links">
         <a href="Homepg.html" class="nav-link text-base sm:text-lg">Home</a>
-        <a href="interface.html" class="nav-link text-base sm:text-lg">Interfaces</a>
+        <a href="interface.html" class="nav-link text-base sm:text-lg">Interface</a>
         <a href="Power.html" class="nav-link text-base sm:text-lg">Power</a>
         <a href="Water-Automation.html" class="nav-link text-base sm:text-lg">Water Automation</a>
-        <a href="Distribution-Box.html" class="nav-link text-base sm:text-lg">Distribution Box</a>
         <a href="Sensors.html" class="nav-link text-base sm:text-lg">Sensors</a>
+        <a href="Distribution-Box.html" class="nav-link text-base sm:text-lg">Distribution Box</a>
       </div>
     </div>
   </nav>
